--- a/librarywebsite/style.css
+++ b/librarywebsite/style.css
@@ -21,7 +21,7 @@ nav a{
 }
 nav a:hover{
     background-color: teal;
-    color:black;
+    color:rgb(192, 27, 27);
 }
 .login{
     border: 1px solid red;
@@ -88,6 +88,9 @@ body.home {
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .login h2 {
@@ -99,7 +102,7 @@ body.home {
     }
 
     .login input {
-        width: 100%;
+        width: calc(100%-16px);
         padding: 8px;
         margin-bottom: 16px;
         box-sizing: border-box;
@@ -127,8 +130,8 @@ body.home {
         text-decoration: none;
     }
  
-   
 .login {
+    background-size: cover;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -158,6 +161,7 @@ body.home {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .login button:hover {
